--- a/style.css
+++ b/style.css
@@ -7,18 +7,50 @@
 .container {
     display: flex;
     flex-direction: column;
+    margin: 6rem
 }
 
 .grid-container {
     display: grid;
     border: 1px solid black;
-    grid-template-columns: repeat(3, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    height: 80vh
+    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-rows: repeat(3, 1fr);
+}
+
+/* results container, middle thingy */
+.results-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+
+    grid-row:  2/ 3;
 }
 
 .player {
     grid-column: 1 / 2;
-    grid-row: 1 / 3;
-    background-color: red;
+    grid-row: 1 / 4;
+    background-color: rgb(216, 165, 165);
+}
+
+.computer {
+    grid-column: 3 / 4;
+    grid-row: 1 / 4;
+    background-color: rgb(118, 118, 212);
+}
+
+/* Left and Right Tabs */
+.tab {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    align-items: center;
+    justify-content: center;
+}
+
+/* Results */
+.result-icons {
+    display: flex;
+    align-items: center;
+
 }
