--- a/style.css
+++ b/style.css
@@ -45,7 +45,6 @@
 .tab {
     display: flex;
     flex-direction: column;
-    gap: 1rem;
     align-items: center;
     justify-content: center;
 }
@@ -55,13 +54,21 @@
     width: 7rem;
     display: flex;
     align-items: center;
+    outline: none;
+    margin: 1rem;
 }
+
 
 /* Results */
 .result-icons {
     display: flex;
     align-items: center;
 
+}
+
+.result-icons img {
+    height: 100px;
+    width: 100px;
 }
 
 /* Media Queries */
