--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 .container {
     display: flex;
     flex-direction: column;
+    align-items: center;
     margin: 6rem;
 
 }
@@ -16,6 +17,8 @@
     border: 1px solid black;
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: repeat(3, 1fr);
+    width: 50vw;
+
 }
 
 /* results container, middle thingy */
