--- a/style.css
+++ b/style.css
@@ -9,15 +9,16 @@
     flex-direction: column;
     align-items: center;
     margin: 6rem;
-
+    min-width: 500px;
 }
 
 .grid-container {
     display: grid;
-    border: 1px solid black;
+    /* border: 1px solid black; */
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: repeat(3, 1fr);
     width: 50vw;
+
 
 }
 
@@ -91,5 +92,6 @@
 }
 
 body {
-    background-color: brown;
+    background-color: white;
+
 }
