--- a/style.css
+++ b/style.css
@@ -3,25 +3,45 @@
     padding: 0;
     box-sizing: border-box;
 }
+html {
+    position: relative;
+}
+/* body {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+} */
+.title-container {
+    display: flex;
+    justify-content: center;
+    padding: 40px;
+    background-color: red;
+}
+.title {
 
+    font-size: 32px;
+    justify-content: center;
+
+}
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 6rem;
-    min-width: 500px;
+    justify-content: center;
+    /* margin: 6rem; */
+    /* min-width: 500px; */
+    height: 100vh;
+
 }
 
 .grid-container {
     display: grid;
     /* border: 1px solid black; */
-    grid-template-columns: 1fr 2fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: repeat(3, 1fr);
+
     width: 50vw;
-
-
 }
-
 /* results container, middle thingy */
 .results-container {
     display: flex;
@@ -36,13 +56,13 @@
 .player {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
-    background-color: rgb(216, 165, 165);
+
 }
 
 .computer {
     grid-column: 3 / 4;
     grid-row: 1 / 4;
-    background-color: rgb(118, 118, 212);
+
 }
 
 /* Left and Right Tabs */
@@ -54,12 +74,14 @@
 }
 
 .player-div > img, .computer-div > img {
-    height: 7rem;
-    width: 7rem;
+    height: 8rem;
+    width: 8rem;
     display: flex;
     align-items: center;
     outline: none;
     margin: 1rem;
+    border: 1px solid black;
+    border-radius: 10px;
 }
 
 
@@ -77,7 +99,7 @@
 
 /* Media Queries */
 
-@media only screen and (max-width: 800px) {
+@media (max-width: 800px) {
 
     .grid-container {
         max-width: 480px;
@@ -87,12 +109,12 @@
     .result-icons {
         display: flex;
         flex-direction: column;
+        gap: 30px;
     }
-
 }
 
 body {
-    background-color: white;
+    background-color: whitesmoke
 
 }
 
@@ -102,9 +124,9 @@ body {
 
 /* The Modal (background) */
 .modal {
-    display: none; /* Hidden by default */
+    display: block; /* Hidden by default */
     position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    /* z-index: 1; Sit on top  */
     left: 0;
     top: 0;
     width: 100%; /* Full width */
@@ -116,12 +138,15 @@ body {
   
   /* Modal Content/Box */
   .modal-content {
-    background-color: #fefefe;
+    position: fixed;
+    z-index: 1;
+    top: 50%;
+    left: 50%;
+    background-color: red;
     margin: 15% auto; /* 15% from the top and centered */
     padding: 20px;
     border: 1px solid #888;
-    height: 20%;
-    width: 30%; /* Could be more or less, depending on screen size */
+    width: 300px; /* Could be more or less, depending on screen size */
   }
   
   /* The Close Button */
