--- a/style.css
+++ b/style.css
@@ -3,9 +3,7 @@
     padding: 0;
     box-sizing: border-box;
 }
-html {
-    position: relative;
-}
+
 /* body {
     display: block;
     flex-direction: column;
@@ -23,24 +21,20 @@ html {
     justify-content: center;
 
 }
-.container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    /* margin: 6rem; */
-    /* min-width: 500px; */
-    height: 100vh;
-
-}
 
 .grid-container {
-    display: grid;
     /* border: 1px solid black; */
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: repeat(3, 1fr);
 
-    width: 50vw;
+    display: flex;
+    justify-content: center;
+
+
+    margin: auto;
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    /* grid-template-rows: repeat(3, 1fr); */
+    width: 100%;
+    height: 85vh;
+
 }
 /* results container, middle thingy */
 .results-container {
@@ -99,54 +93,46 @@ html {
 
 /* Media Queries */
 
-@media (max-width: 800px) {
-
-    .grid-container {
-        max-width: 480px;
-        height: 50vh;
-    }
-
-    .result-icons {
-        display: flex;
-        flex-direction: column;
-        gap: 30px;
-    }
-}
-
-body {
-    background-color: whitesmoke
-
-}
 
 .endGame {
     pointer-events: none;
 }
 
 /* The Modal (background) */
+
+/* currently the modal-content is sliding because it's moving with the modal div, if I want it to stay in one place, maybe we should put the modal and the modal-content into separte divs? */
+
 .modal {
-    display: block; /* Hidden by default */
+    display: none; /* Hidden by default */
     position: fixed; /* Stay in place */
-    /* z-index: 1; Sit on top  */
+
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height:100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    width: 100vw; /* Full width */
+    height:100vh; /* Full height */
     background-color: rgb(0,0,0); /* Fallback color */
     background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
   }
   
   /* Modal Content/Box */
   .modal-content {
-    position: fixed;
+    display: none;
     z-index: 1;
-    top: 50%;
-    left: 50%;
+position: fixed;
+width: 500px;
+height: 200px;
+top: 50%;
+left: 50%;
+margin-top: -100px; /* Negative half of height. */
+margin-left: -150px; /* Negative half of width. */
+    padding: 30px;
+    border-radius: 10px;
     background-color: red;
-    margin: 15% auto; /* 15% from the top and centered */
+
     padding: 20px;
     border: 1px solid #888;
     width: 300px; /* Could be more or less, depending on screen size */
+    text-align: center;
   }
   
   /* The Close Button */
