--- a/style.css
+++ b/style.css
@@ -1,8 +1,15 @@
+:root {
+    --color: color: white;
+}
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
+
 
 /* body {
     display: block;
@@ -10,14 +17,16 @@
     align-items: center;
 } */
 .title-container {
+
     display: flex;
     justify-content: center;
     padding: 40px;
-    background-color: red;
+    background-color: var(--color);
 }
 .title {
-
-    font-size: 32px;
+    font-family: 'Walter Turncoat', cursive;
+    /* font-family: Arial, Helvetica, sans-serif; */
+    font-size: 48px;
     justify-content: center;
 
 }
@@ -33,9 +42,15 @@
     /* grid-template-columns: 1fr 1fr 1fr; */
     /* grid-template-rows: repeat(3, 1fr); */
     width: 100%;
-    height: 85vh;
-
 }
+
+.footer-container {
+    position: fixed;
+    bottom: 0;
+    width: 100vw;
+}
+
+
 /* results container, middle thingy */
 .results-container {
     display: flex;
@@ -91,8 +106,9 @@
     width: 100px;
 }
 
-/* Media Queries */
-
+.footer-container {
+    text-align: center;
+}
 
 .endGame {
     pointer-events: none;
