--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 :root {
-    --color: color: white;
+    --black: #000000FF;
+    --white: #EFF5F5
 }
 
 
@@ -10,18 +11,18 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
+body {
+    background-color: var(--black);
+}
 
-/* body {
-    display: block;
-    flex-direction: column;
-    align-items: center;
-} */
+h1, p, footer, a {
+    color: var(--white);
+}
+
 .title-container {
-
     display: flex;
     justify-content: center;
     padding: 40px;
-    background-color: var(--color);
 }
 .title {
     font-family: 'Walter Turncoat', cursive;
@@ -32,15 +33,9 @@
 }
 
 .grid-container {
-    /* border: 1px solid black; */
-
     display: flex;
     justify-content: center;
-
-
     margin: auto;
-    /* grid-template-columns: 1fr 1fr 1fr; */
-    /* grid-template-rows: repeat(3, 1fr); */
     width: 100%;
 }
 
@@ -48,6 +43,7 @@
     position: fixed;
     bottom: 0;
     width: 100vw;
+    font-size: .9rem;
 }
 
 
@@ -57,7 +53,6 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-
     grid-row:  2/ 3;        
 }
 
@@ -65,13 +60,11 @@
 .player {
     grid-column: 1 / 2;
     grid-row: 1 / 4;
-
 }
 
 .computer {
     grid-column: 3 / 4;
     grid-row: 1 / 4;
-
 }
 
 /* Left and Right Tabs */
@@ -88,9 +81,9 @@
     display: flex;
     align-items: center;
     outline: none;
-    margin: 1rem;
+    margin: 2.5rem;
     border: 1px solid black;
-    border-radius: 10px;
+    border-radius: 20px;
 }
 
 
